cloud-native-k8s-101/assets/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shop
  labels:
    purpose: coffee-and-code
    app.kubernetes.io/part-of: acme-shop
