cloud-native-k8s-101/assets/manifests/checkout-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: checkout
  namespace: shop
  labels:
    app: checkout
spec:
  type: ClusterIP
  selector:
    app: checkout
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
